# json-pointer

./: README.md  pyproject.toml
json_pointer/: __init__.py  json_pointer.py
tests/: test_json_pointer.py
